--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,6 +69,9 @@ body{
 .header-li:hover::before{
   @apply w-full
 }
+.header-li-static::before{
+  @apply w-full
+}
 .hover-li{
   @apply w-fit relative my-hover
 }
